fix: improved seo and accessibility

--- a/apps/portfolio/src/components/navbar.astro
+++ b/apps/portfolio/src/components/navbar.astro
@@ -4,7 +4,7 @@ import NavLink from './nav-link.astro'
 
 <nav class='flex max-sm:flex-col sm:items-center sm:justify-start'>
 	<div class='flex gap-4 items-center justify-start'>
-		<img src="https://github.com/rawnly.png" class='rounded-full aspect-square size-12' />
+		<img alt="rawnly's profile_pic" src="https://github.com/rawnly.png" class='rounded-full aspect-square size-12' />
 		<div class='flex items-start justify-center mr-auto flex-col'>
 			<h3 class='font-bold text-lg'>
 				Federico Vitale
